change password and login from db, fix swagger document body params
