# models/user.js
@@ -1,24 +1,7 @@
-'use strict';
-const {
-  Model
-} = require('sequelize');
-module.exports = (sequelize, DataTypes) => {
-  class User extends Model {
-    /**
-     * Helper method for defining associations.
-     * This method is not a part of Sequelize lifecycle.
-     * The `models/index` file will call this method automatically.
-     */
-    static associate(models) {
-      // define association here
-    }
-  };
-  User.init({
-    username: DataTypes.STRING,
-    password: DataTypes.STRING
-  }, {
-    sequelize,
-    modelName: 'User',
+module.exports = (sequelize, Sequelize) => {
+  const Customer = sequelize.define('user', {
+    username: Sequelize.STRING,
+    password: Sequelize.STRING,
   });
-  return User;
+  return Customer;
 };
